Fix bug 348809.  r+sr=dbaron